--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@radix-ui/react-menubar": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.28",
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-tweet": "^3.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vercel": "^37.1.2"
