Added new components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
         "Ancora",
+        "Boder",
         "imgs",
         "Insaurance",
         "iori",
         "removebg",
+        "svgrepo",
+        "swiper",
         "tailwindcss"
     ]
 }
