--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-infinite-logo-slider": "^1.0.13",
     "react-tweet": "^3.2.1",
+    "swiper": "^11.1.12",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vercel": "^37.1.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
