Fixed one error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "imgs",
         "Insaurance",
         "iori",
+        "Kpojjb",
         "removebg",
         "svgrepo",
         "swiper",
