--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,15 @@
     "cSpell.words": [
         "Ancora",
         "Boder",
+        "Citi",
+        "Creta",
         "imgs",
         "Insaurance",
         "iori",
         "Kpojjb",
+        "Maruti",
         "removebg",
+        "Sonet",
         "svgrepo",
         "swiper",
         "tailwindcss"
