--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Sonet",
         "svgrepo",
         "swiper",
-        "tailwindcss"
+        "tailwindcss",
+        "titulo"
     ]
 }
